--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15,7 +15,7 @@
   --red: #e3342f;
   --orange: #f6993f;
   --yellow: #ffed4a;
-  --green: #38c172;
+  --green: #38c15d;
   --teal: #4dc0b5;
   --cyan: #6cb2eb;
   --white: #fff;
